--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,8 +25,8 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="@dimen/_45sdp"
-            android:layout_height="@dimen/_45sdp"
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_60sdp"
             android:layout_gravity="center"
             android:contentDescription="@null"
             android:src="@drawable/udaan"
@@ -35,19 +35,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Udaan"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_25sdp"
-            android:textStyle="bold"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/futura_medium"
-            app:layout_constraintStart_toEndOf="@id/logo"
-            app:layout_constraintTop_toTopOf="@id/logo"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/appName"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Udaan"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="@dimen/_25sdp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:fontFamily="@font/futura_medium"-->
+<!--            app:layout_constraintStart_toEndOf="@id/logo"-->
+<!--            app:layout_constraintTop_toTopOf="@id/logo"-->
+<!--            />-->
 
     </LinearLayout>
 
@@ -85,7 +85,7 @@
             android:layout_marginHorizontal="70dp"
             android:textStyle="bold"
             app:cornerRadius="15dp"
-            app:strokeColor="#0acff3"
+            app:strokeColor="@color/sky_blue"
             android:padding="15dp"
             app:strokeWidth="2dp"
             android:textSize="17sp"
@@ -104,10 +104,9 @@
             app:cornerRadius="15dp"
             android:textSize="17sp"
             android:padding="15dp"
-            android:backgroundTint="#0acff3"
+            android:backgroundTint="@color/sky_blue"
             app:layout_constraintTop_toBottomOf="@id/login"
             />
-
 
     </LinearLayout>
 
