--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -51,7 +51,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="#6A686A"
         />
 
     <TextView
@@ -60,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/satoshi"
-        android:text=" Forgot Password"
+        android:text="Forgot Password"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lock"
@@ -71,8 +70,9 @@
         android:id="@+id/account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please enter the Phone \n associated with your account\n end we will send otp"
+        android:text="Please enter the Email/Phone \nassociated with your account\nend we will send an otp"
         android:textSize="14sp"
+        android:textColor="@color/light_black"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
