--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,9 @@
         android:id="@+id/notification"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_baseline_notifications_24"
+        app:tint="@color/black"
+        android:src="@drawable/notification"
         android:layout_margin="25dp"
-        app:tint="@color/light_gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
