--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:id="@+id/vp"
-        android:backgroundTint="@color/sky_blue"
         android:background="@drawable/back_img_library"
         android:layout_margin="30dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +50,7 @@
             android:layout_width="50dp"
             android:layout_height="80dp"
             android:layout_marginStart="30dp"
-            android:src="@drawable/save"
+            android:src="@drawable/saved"
             app:layout_constraintTop_toTopOf="@id/notes"
             app:layout_constraintStart_toEndOf="@id/notes"
             />
@@ -126,7 +125,7 @@
         android:id="@+id/upcoming_exam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upcoming Exam"
+        android:text="Exam"
         android:textSize="14sp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/satoshi"
