--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,6 +95,7 @@
             android:id="@+id/phone"
             android:textSize="17sp"
             />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -161,7 +162,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login"/>
+        app:layout_constraintTop_toBottomOf="@id/login"
+        />
 
     <TextView
         android:id="@+id/or"
@@ -233,6 +235,5 @@
         app:layout_constraintTop_toTopOf="@id/acc"
         app:layout_constraintStart_toEndOf="@id/acc"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
