--- a/app/src/main/res/layout/fragment_otp_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_otp_forgot_password.xml
@@ -50,11 +50,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/key"
+        android:src="@drawable/password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/light_gray"
         />
 
     <TextView
@@ -77,7 +76,7 @@
         android:layout_height="wrap_content"
         android:text="4 Digit code has been sent to "
         android:textSize="12dp"
-        android:textColor="#676666"
+        android:textColor="@color/light_black"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
@@ -100,6 +99,7 @@
         />
 
     <com.chaos.view.PinView
+        style="@style/PinWidget.PinView"
         android:id="@+id/otp"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
@@ -108,8 +108,9 @@
         android:fontFamily="@font/satoshi"
         android:inputType="number"
         android:itemBackground="@color/white"
-        android:textColor="#9A9A9A"
+        android:textColor="@color/light_black"
         android:textSize="20dp"
+        android:hint="****"
         app:itemCount="4"
         app:itemRadius="10dp"
         app:itemSpacing="10dp"
@@ -126,7 +127,7 @@
         android:textSize="12sp"
         android:fontFamily="@font/satoshi"
         android:layout_marginStart="5dp"
-        android:textColor="#9A9A9A"
+        android:textColor="@color/light_black"
         app:layout_constraintTop_toBottomOf="@id/otp"
         app:layout_constraintStart_toStartOf="@id/otp"
         app:layout_constraintEnd_toEndOf="@id/otp"
@@ -162,6 +163,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/resend"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
