--- a/app/src/main/res/layout/fragment_otp_login.xml
+++ b/app/src/main/res/layout/fragment_otp_login.xml
@@ -52,6 +52,7 @@
         android:fontFamily="@font/satoshi"
         android:text="Verify Phone"
         android:textSize="24sp"
+        android:textColor="@color/light_black"
         app:layout_constraintStart_toStartOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         />
@@ -62,7 +63,7 @@
         android:layout_height="wrap_content"
         android:text="4 Digit code has been sent to "
         android:textSize="12dp"
-        android:textColor="#383838"
+        android:textColor="@color/light_gray"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
@@ -76,7 +77,7 @@
         android:layout_height="wrap_content"
         android:text="+91 9867453789"
         android:textSize="12dp"
-        android:textColor="#383838"
+        android:textColor="@color/light_gray"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/account"
@@ -93,8 +94,9 @@
         android:elevation="10dp"
         android:fontFamily="@font/satoshi"
         android:inputType="number"
+        android:maxLength="4"
         android:itemBackground="@color/white"
-        android:textColor="#9A9A9A"
+        android:textColor="@color/light_black"
         android:textSize="20sp"
         app:itemCount="4"
         app:itemRadius="10dp"
@@ -167,7 +169,7 @@
         android:textColor="@color/light_black"
         app:layout_constraintTop_toBottomOf="@id/signup"
         app:layout_constraintStart_toStartOf="@id/signup"
-        />
+        tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/conditions"
@@ -180,7 +182,7 @@
         android:textColor="@color/sky_blue"
         app:layout_constraintTop_toTopOf="@id/text"
         app:layout_constraintStart_toEndOf="@id/text"
-        />
+        tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/and"
@@ -192,7 +194,7 @@
         android:fontFamily="@font/satoshi"
         app:layout_constraintTop_toBottomOf="@id/text"
         app:layout_constraintStart_toStartOf="@id/text"
-        />
+        tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/policy"
@@ -205,7 +207,7 @@
         android:textColor="#0ACFF3"
         app:layout_constraintTop_toTopOf="@id/and"
         app:layout_constraintStart_toEndOf="@id/and"
-        />
+        tools:ignore="SmallSp" />
 
     <View
         android:id="@+id/view"
@@ -289,7 +291,5 @@
         app:layout_constraintTop_toTopOf="@id/acc"
         app:layout_constraintStart_toEndOf="@id/acc"
         />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
