--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -7,13 +7,13 @@
     android:layout_margin="7dp"
     android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".other.questionFragment">
+    tools:context=".other.QuestionFragment">
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_baseline_keyboard_backspace_24"
-        android:id="@+id/menu"
+        android:id="@+id/back"
         app:tint="@color/light_gray"
         android:layout_marginTop="15dp"
         android:layout_marginStart="20sp"
@@ -112,7 +112,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="20dp"
-            android:src="@drawable/saved"
+            android:src="@drawable/save"
             app:layout_constraintTop_toTopOf="@id/question"
             app:layout_constraintEnd_toEndOf="parent"
             />
