--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -47,7 +47,7 @@
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/satoshi"
         android:text="       Hi,\n Welcome!"
         android:textColor="@color/light_black"
@@ -72,29 +72,6 @@
         app:layout_constraintEnd_toEndOf="@id/welcome"
         />
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:boxStrokeColor="@color/teal_700"-->
-<!--        app:boxStrokeWidth="1dp"-->
-<!--        android:id="@+id/phone_number"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:layout_marginHorizontal="40sp"-->
-<!--        android:hint="Email/Phone"-->
-<!--        tools:ignore="MissingClass"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/account">-->
-
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="17sp"-->
-<!--            android:padding="15dp"-->
-<!--            android:background="@drawable/background_edit_text"-->
-<!--            android:textCursorDrawable="@drawable/cursur_red"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:drawablePadding="10dp"-->
-<!--            />-->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
@@ -102,7 +79,6 @@
         android:layout_marginTop="40dp"
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
-        android:hint="  Phone number"
         android:id="@+id/phone_number"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
@@ -116,13 +92,43 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:padding="15dp"
+            android:hint="Phone number"
+            android:maxLength="10"
             android:id="@+id/phone"
+            android:drawablePadding="15dp"
             android:drawableStart="@drawable/india"
             android:textSize="17sp"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:id="@+id/password"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/phone_number"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:padding="15dp"
+            android:hint="  password"
+            android:id="@+id/passwords"
+            android:drawablePadding="15dp"
+            android:drawableStart="@drawable/hide"
+            android:textSize="17sp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.button.MaterialButton
         android:id="@+id/continues"
         android:layout_width="match_parent"
@@ -135,7 +141,7 @@
         android:textSize="17sp"
         android:padding="15dp"
         android:backgroundTint="#0ACFF3"
-        app:layout_constraintTop_toBottomOf="@id/phone_number"
+        app:layout_constraintTop_toBottomOf="@id/password"
         />
 
     <TextView
