--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -49,11 +49,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/unlocked"
+        android:src="@drawable/unlock"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="#6A686A"
         />
 
     <TextView
@@ -75,7 +74,7 @@
         android:layout_height="wrap_content"
         android:text= "your new password must be different\n from previous used passwords"
         android:textSize="12sp"
-        android:textColor="@color/light_gray"
+        android:textColor="@color/light_black"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
@@ -90,13 +89,37 @@
         android:layout_marginTop="40dp"
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
-        android:hint="Email/Phone"
-        android:id="@+id/phone_number"
+        android:hint="Current password"
+        android:id="@+id/current_passwords"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
         app:layout_constraintTop_toBottomOf="@id/account">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:padding="15dp"
+            android:id="@+id/current_password"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:hint="New password"
+        android:id="@+id/password"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/current_passwords">
 
         <EditText
             android:layout_width="match_parent"
@@ -115,14 +138,14 @@
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
-        android:hint="password"
-        android:id="@+id/password"
+        android:hint="Confirm password"
+        android:id="@+id/confirm_password"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
         app:endIconMode="password_toggle"
-        app:layout_constraintTop_toBottomOf="@id/phone_number">
+        app:layout_constraintTop_toBottomOf="@id/password">
 
         <EditText
             android:layout_width="match_parent"
@@ -147,7 +170,7 @@
         android:textSize="17sp"
         android:padding="15dp"
         android:backgroundTint="#0ACFF3"
-        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintTop_toBottomOf="@id/confirm_password"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
