--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -1,56 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".other.Test">
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_baseline_keyboard_backspace_24"
-        android:id="@+id/menu"
-        app:tint="@color/light_gray"
-        android:layout_marginTop="25dp"
-        android:layout_marginStart="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <EditText
-        android:id="@+id/search"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:autofillHints="@null"
-        android:layout_marginHorizontal="70dp"
-        android:background="@drawable/stroke_black_1_rounded_7"
-        android:drawableStart="@drawable/ic_round_search_24"
-        android:drawableTint="@color/light_gray"
-        android:drawablePadding="10dp"
-        android:fontFamily="@font/open_sans"
-        android:hint="Search Exams and more"
-        android:inputType="text"
-        android:padding="10dp"
-        android:textCursorDrawable="@drawable/cursor_dark_blue"
-        android:textSize="14sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/notification"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_baseline_notifications_24"
-        android:layout_margin="25dp"
-        app:tint="@color/light_gray"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_keyboard_backspace_24"
+            android:id="@+id/back"
+            app:tint="@color/light_gray"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="20sp"
+            />
+
+        <EditText
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:autofillHints="@null"
+            android:layout_marginHorizontal="40dp"
+            android:background="@drawable/stroke_black_1_rounded_7"
+            android:drawableStart="@drawable/ic_round_search_24"
+            android:drawableTint="@color/light_gray"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/open_sans"
+            android:hint="Search Exams and more"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textCursorDrawable="@drawable/cursor_dark_blue"
+            android:textSize="14sp"
+            />
+
+        <ImageView
+            android:id="@+id/notification"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/ic_baseline_notifications_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/light_gray"
+            />
+
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
@@ -65,14 +69,12 @@
         app:tabSelectedTextColor="@color/black"
         app:tabTextColor="#333333"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/search"
         />
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tablayout"
-        android:id="@+id/vp"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
