--- a/app/src/main/res/layout/row_item_blog.xml
+++ b/app/src/main/res/layout/row_item_blog.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/back_img_library">
 
  <TextView
-     android:id="@+id/title"
+    android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="16sp"
@@ -80,7 +80,7 @@
         android:textSize="12sp"
         android:layout_marginEnd="30dp"
         android:drawablePadding="5dp"
-        android:drawableStart="@drawable/saved"
+        android:drawableStart="@drawable/save"
         android:drawableTint="@color/light_gray"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/view"
