--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -118,60 +118,89 @@
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/question"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="WebViewLayout">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Which one of the following river flows between Vindhyan and satpura ranges"
-                android:textSize="16sp"
-                android:layout_margin="20sp"
-                android:fontFamily="@font/satoshi"
-                />
+            <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_20sdp">
 
-            <TextView
-                android:id="@+id/a"
+                <WebView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Which one of the following river flows between Vindhyan and satpura ranges"
+                    android:textSize="16sp"
+                    android:layout_margin="20sp"
+                    android:fontFamily="@font/satoshi"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="A. Narmada"
+                android:background="@drawable/back_img_library"
+                android:padding="15dp"
+                android:layout_margin="20dp">
+                <WebView
+                    android:id="@+id/option_a"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="A. Narmada"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/back_img_library"
-                />
+                >
+                <WebView
+                    android:id="@+id/option_b"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="B. Narmada"
+                    />
+            </LinearLayout>
 
-            <TextView
+           <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:padding="15dp"
+             android:layout_margin="20dp"
+             android:background="@drawable/back_img_library"
+               >
+               <WebView
+                   android:id="@+id/option_c"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="C. Narmada"
+                   />
+           </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="B. Narmada"
                 android:padding="15dp"
                 android:layout_margin="20dp"
-                android:background="@drawable/back_img_library"
-                />
+                android:background="@drawable/back_img_library">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="C. Narmada"
-                android:padding="15dp"
-                android:layout_margin="20dp"
-                android:background="@drawable/back_img_library"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="D. Narmada"
-                android:padding="15dp"
-                android:layout_margin="20dp"
-                android:background="@drawable/back_img_library"
-                />
-
-        </LinearLayout>
+                <WebView
+                    android:id="@+id/option_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="D. Narmada"
+                    />
+            </LinearLayout>
+           </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -204,6 +233,5 @@
         app:layout_constraintTop_toTopOf="@id/Previous"
         app:layout_constraintEnd_toEndOf="@id/ll"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
