--- a/app/src/main/res/layout/fragment_otp_login.xml
+++ b/app/src/main/res/layout/fragment_otp_login.xml
@@ -138,7 +138,9 @@
         android:text="Resend"
         android:textSize="12sp"
         android:textColor="#0ACFF3"
+        android:background="?android:selectableItemBackgroundBorderless"
         android:fontFamily="@font/satoshi"
+        android:enabled="false"
         app:layout_constraintTop_toBottomOf="@id/receive"
         app:layout_constraintStart_toStartOf="@id/receive"
         app:layout_constraintEnd_toEndOf="@id/receive"
