--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".authentication.Register">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/back"
@@ -109,7 +113,7 @@
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
-        android:id="@+id/password"
+        android:id="@+id/tilPass"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -121,14 +125,43 @@
             android:layout_height="wrap_content"
             android:maxLength="20"
             android:padding="15dp"
-            android:hint="  password"
-            android:id="@+id/passwords"
+            android:hint="Create Password"
+            android:id="@+id/password"
             android:drawablePadding="15dp"
             android:drawableStart="@drawable/hide"
             android:textSize="17sp"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:id="@+id/tillConfirmPass"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tilPass"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:padding="15dp"
+            android:hint="Confirm Password"
+            android:id="@+id/confirmPass"
+            android:drawablePadding="15dp"
+            android:drawableStart="@drawable/hide"
+            android:textSize="17sp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/continues"
         android:layout_width="match_parent"
@@ -141,7 +174,7 @@
         android:textSize="17sp"
         android:padding="15dp"
         android:backgroundTint="#0ACFF3"
-        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintTop_toBottomOf="@id/tillConfirmPass"
         />
 
     <TextView
@@ -259,7 +292,9 @@
         android:textSize="12sp"
         android:fontFamily="@font/satoshi"
         android:textColor="@color/light_black"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_marginTop="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/google"
@@ -273,9 +308,14 @@
         android:fontFamily="@font/satoshi"
         android:textSize="12sp"
         android:textColor="#0ACFF3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_marginStart="5sp"
         app:layout_constraintTop_toTopOf="@id/acc"
         app:layout_constraintStart_toEndOf="@id/acc"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
