--- a/app/src/main/res/layout/fragment_more_information.xml
+++ b/app/src/main/res/layout/fragment_more_information.xml
@@ -34,6 +34,7 @@
         />
 
     <TextView
+        android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Skip"
@@ -172,7 +173,7 @@
         android:id="@+id/phone_number"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="50sp"
-        android:hint="+91 123456789"
+        android:hint="+91 phone number"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
