--- a/app/src/main/res/layout/fragment_otp_login.xml
+++ b/app/src/main/res/layout/fragment_otp_login.xml
@@ -89,23 +89,23 @@
         android:id="@+id/otp"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginTop="20dp"
         android:elevation="10dp"
         android:fontFamily="@font/satoshi"
         android:inputType="number"
-        android:maxLength="4"
-        android:itemBackground="@color/white"
-        android:textColor="@color/light_black"
+        android:maxLength="6"
+        android:textColor="@color/black"
         android:textSize="20sp"
-        app:itemCount="4"
+        app:itemCount="6"
         app:itemRadius="10dp"
         app:itemSpacing="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phone_number"
         style="@style/PinWidget.PinView"
         android:cursorVisible="true"
-        android:hint="****"
+        android:hint="******"
+        android:textColorHint="@color/light_gray"
         android:padding="@dimen/_5sdp"
         android:textStyle="bold"
         app:cursorColor="@color/black"
