--- a/app/src/main/res/layout/row_item_exam.xml
+++ b/app/src/main/res/layout/row_item_exam.xml
@@ -3,17 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:padding="10dp"
     android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:contentDescription="@null"
         android:src="@drawable/ic_baseline_article_24"
         android:background="@drawable/background_row_item_img"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="@dimen/_33sdp"
         android:padding="10dp"
+        android:id="@+id/imgExam"
         app:tint="@color/light_gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +38,11 @@
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:contentDescription="@null"
         android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:layout_marginEnd="20sp"
+        android:layout_marginEnd="40sp"
         app:tint="@color/light_gray"
+        android:id="@+id/forwardArrow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
