--- a/app/src/main/res/layout/row_item_question.xml
+++ b/app/src/main/res/layout/row_item_question.xml
@@ -52,7 +52,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/question"
+            android:id="@+id/question_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Question 1 of 20 "
@@ -68,7 +68,7 @@
             android:layout_height="20dp"
             android:layout_marginEnd="20dp"
             android:src="@drawable/saved"
-            app:layout_constraintTop_toTopOf="@id/question"
+            app:layout_constraintTop_toTopOf="@id/question_no"
             app:layout_constraintEnd_toEndOf="parent"
             />
 
@@ -77,53 +77,130 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp"
-            app:layout_constraintTop_toBottomOf="@id/question"
+            app:layout_constraintTop_toBottomOf="@id/question_no"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Which one of the following river flows between Vindhyan and satpura ranges"
-                android:textSize="16sp"
-                android:layout_margin="20sp"
-                android:fontFamily="@font/satoshi"
-                />
 
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="A. Narmada"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="@dimen/_20sdp">
+
+                <WebView
+                    android:id="@+id/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20sp"
+                    android:fontFamily="@font/satoshi"
+                    android:text="Which one of the following river flows between Vindhyan and satpura ranges"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/back_img_library"
+                android:padding="15dp"
+                android:layout_margin="20dp">
+                <WebView
+                    android:id="@+id/option_a"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="A. Narmada"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:padding="15dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/back_img_library"
-                />
+                >
+                <WebView
+                    android:id="@+id/option_b"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="B. Narmada"
+                    />
+            </LinearLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="B. Narmada"
+                android:layout_height="match_parent"
                 android:padding="15dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/back_img_library"
-                />
+                >
+                <WebView
+                    android:id="@+id/option_c"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="C. Narmada"
+                    />
+            </LinearLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="C. Narmada"
+                android:layout_height="match_parent"
                 android:padding="15dp"
                 android:layout_margin="20dp"
-                android:background="@drawable/back_img_library"
-                />
+                android:background="@drawable/back_img_library">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="D. Narmada"
-                android:padding="15dp"
-                android:layout_margin="20dp"
-                android:background="@drawable/back_img_library"
-                />
+                <WebView
+                    android:id="@+id/option_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="D. Narmada"
+                    />
+            </LinearLayout>
+
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Which one of the following river flows between Vindhyan and satpura ranges"-->
+<!--                android:textSize="16sp"-->
+<!--                android:layout_margin="20sp"-->
+<!--                android:fontFamily="@font/satoshi"-->
+<!--                />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="A. Narmada"-->
+<!--                android:padding="15dp"-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:background="@drawable/back_img_library"-->
+<!--                />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="B. Narmada"-->
+<!--                android:padding="15dp"-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:background="@drawable/back_img_library"-->
+<!--                />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="C. Narmada"-->
+<!--                android:padding="15dp"-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:background="@drawable/back_img_library"-->
+<!--                />-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="D. Narmada"-->
+<!--                android:padding="15dp"-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:background="@drawable/back_img_library"-->
+<!--                />-->
 
        </LinearLayout>
 
