--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="sky_blue">#0ACFF3</color>
     <color name="primary_dark">#355b99</color>
     <color name="light_black">#AB000000</color>
+    <color name="cardview_dark_background">#FF424242</color>
 </resources>
