--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -174,7 +174,7 @@
         />
 
     <TextView
-        android:id="@+id/view_all1"
+        android:id="@+id/view_all_blog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View all"
