--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -92,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
+            android:inputType="phone"
             android:id="@+id/phone"
             android:textSize="17sp"
             />
@@ -105,7 +106,7 @@
         android:layout_marginTop="20dp"
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
-        android:hint="password"
+        android:hint="Password"
         android:id="@+id/password"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
@@ -162,6 +163,7 @@
         android:background="@color/light_gray"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login"
         />
@@ -173,6 +175,7 @@
         android:text="Or"
         android:textSize="12sp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:layout_marginStart="20dp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/login"
@@ -186,6 +189,7 @@
         android:background="@color/light_gray"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/or"
         app:layout_constraintTop_toBottomOf="@id/login"
         />
@@ -202,6 +206,7 @@
         android:textSize="17sp"
         android:padding="15dp"
         android:fontFamily="@font/satoshi"
+        android:visibility="gone"
         app:icon="@drawable/google"
         app:iconGravity="textStart"
         app:iconPadding="15dp"
