--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -233,6 +233,7 @@
         android:layout_height="1dp"
         android:background="@color/light_gray"
         android:layout_marginTop="40dp"
+        android:visibility="gone"
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/policy"
@@ -244,6 +245,7 @@
         android:layout_height="wrap_content"
         android:text="Or"
         android:textSize="12sp"
+        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:textColor="@color/black"
@@ -256,6 +258,7 @@
         android:layout_width="135dp"
         android:layout_height="1dp"
         android:background="@color/light_gray"
+        android:visibility="gone"
         android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toEndOf="@id/or"
@@ -272,6 +275,7 @@
         android:layout_marginEnd="50dp"
         app:cornerRadius="15dp"
         android:textSize="17sp"
+        android:visibility="gone"
         android:padding="15dp"
         android:fontFamily="@font/satoshi"
         app:icon="@drawable/google"
